--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
-    "astro": "^5.16.3",
-    "tailwindcss": "^4.1.17"
+    "astro": "5.16.3",
+    "swiper": "12.0.3",
+    "tailwindcss": "4.1.17"
   }
 }
