refact:eliminacion de dependencias pesadas y se agrega vendor/LightweightGoogleCalendar

--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
     "type": "project",
     "require": {
         "php": ">=7.4",
-        "phpmailer/phpmailer": "^6.9",
-        "google/apiclient": "^2.15"
+        "phpmailer/phpmailer": "^6.9"
     },
     "config": {
         "platform": {
