--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "astro": "5.16.3",
     "swiper": "12.0.3",
     "tailwindcss": "4.1.17"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19"
   }
 }
